--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8100
 
 #cloud-config
 spring.config.import=optional:configserver:http://localhost:8888
+
+#eureka setup
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
