--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.username=root
 spring.datasource.password=nnknnknnk
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#eureka setup
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
